tests/test-dirs/upstream-typing-recovery/original-tests/incoherent_label_order.ml
(* TEST
   flags = " -typing-recovery";
   ocamlc_byte_exit_status = "2";
   setup-ocamlc.byte-build-env;
   compile_only = "true";
   ocamlc.byte;
   check-ocamlc.byte-output;
*)

let g f = f ~x:0 ~y:0; f ~y:0 ~x:0
let t : int = ""
